--- a/src/app/Paginas/Body/detalle-usuario/detalle-usuario.component.html
+++ b/src/app/Paginas/Body/detalle-usuario/detalle-usuario.component.html
@@ -3,6 +3,11 @@
     <h2 class="text-light">{{userService.User.email}}</h2>
   </div>
 </div>
+<button class="btn btn-outline-info rounded-circle backNavigation" routerLink="/backups">
+          <span>
+            <fa-icon [icon]="util.faChevronLeft"></fa-icon>
+          </span>
+</button>
 
 <div class="row" style="margin: 0px;">
   <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 " style="padding-left: 10px">
