--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/accounts/accounts.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/accounts/accounts.component.html
@@ -5,7 +5,7 @@
 </button>
 
 <div class="container text-center" *ngIf="accountService.Accounts.length == 0" style="margin-top: 200px;">
-  <h2 class="font-weight-lighter">La tabla Account no tiene inconsistencia de datos</h2>
+  <h2 class="font-weight-lighter">{{util.msj}}</h2>
 </div>
 <div *ngIf="accountService.Accounts.length > 0">
   <table class="table table-hover">
