--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/currencies/currencies.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/currencies/currencies.component.html
@@ -14,7 +14,7 @@
 </button>
 
 <div class="container text-center" *ngIf="currenciesService.Currencies.length == 0" style="margin-top: 200px;">
-  <h2 class="font-weight-lighter">La tabla Currency no tiene inconsitencia de datos</h2>
+  <h2 class="font-weight-lighter">{{util.msj}}</h2>
 </div>
 <div *ngIf="currenciesService.Currencies.length > 0">
   <table class="table table-hover">
