--- a/src/app/Paginas/Body/mantenimiento/inconsistencia/movements/movements.component.html
+++ b/src/app/Paginas/Body/mantenimiento/inconsistencia/movements/movements.component.html
@@ -14,7 +14,7 @@
 </button>
 
 <div class="container text-center" *ngIf="movementsService.Movements.length == 0" style="margin-top: 200px;">
-  <h2 class="font-weight-lighter">La tabla Movements no tiene inconsistencia de datos</h2>
+  <h2 class="font-weight-lighter">{{util.msj}}</h2>
 </div>
 <div *ngIf="movementsService.Movements.length > 0">
   <table class="table table-hover table-responsive">
