--- a/src/app/Paginas/Body/backups/backups.component.html
+++ b/src/app/Paginas/Body/backups/backups.component.html
@@ -71,11 +71,11 @@
     </span>
 </button>
 <!-- ------------------------------------------------------------------------------------------------------ -->
-<button class="btn btn-outline-info rounded-circle backNavigation" routerLink="/home">
+<!--button class="btn btn-outline-info rounded-circle backNavigation" routerLink="/home">
           <span>
             <fa-icon [icon]="util.faChevronLeft"></fa-icon>
           </span>
-</button>
+</button-->
 <!-- ------------------------------------------------------------------------------------------------------ -->
 <div *ngIf="backService.backups.length > 0">
   <table class="table table-hover">
