--- a/src/app/Paginas/Header/nav-encode/nav-encode.component.html
+++ b/src/app/Paginas/Header/nav-encode/nav-encode.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-top navbar-expand-lg navEncode shadow-sm">
-  <a class="navbar-brand" routerLink="/home" *ngIf="userService.activo()">
+  <a class="navbar-brand" (click)="eventLogo()" *ngIf="userService.activo()" style="cursor: pointer;">
     <img src="../../../../assets/img/logo.png" class="imgLogo">
   </a>
 
