--- a/src/app/Paginas/Body/mantenimiento/backups/backups.component.html
+++ b/src/app/Paginas/Body/mantenimiento/backups/backups.component.html
@@ -31,20 +31,23 @@
   <div class="row">
     <div class="col-9"></div>
     <div class="col-3">
-      <div class="form-group row">
-        <div class="col-3">
-          <label for="backup" class="col-form-label" style="font-size: 18px; font-weight: normal">Rango:</label>
+      <div class="form-row">
+        <div class="form-group col-4">
+          <label for="rangoUsers" class="col-form-label" style="font-size: 18px; font-weight: normal">Núm. Usuarios:</label>
+          <input type="number" value="10" class="form-control"pattern="^[0-9]+" min="1" [(ngModel)]="rangoUsers.value" id="rangoUsers" name="rangoUsers" (keyup)="keyUpEventRangoUsers($event)" (blur)="afterBlurRangoUsers($event)" (focus)="beforeBlurRangoUsers($event)">
         </div>
-        <div class="col-4">
-          <input type="number" value="10" class="form-control"pattern="^[0-9]+" min="1" id="rangoBackups" [(ngModel)]="rangoBackups" name="rangoBackups" (keyup)="prueba($event)" (blur)="afterBlur($event)" (focus)="beforeBlur($event)">
+        <div class="form-group col-4">
+          <label for="rangoBackups" class="col-form-label" style="font-size: 18px; font-weight: normal">Núm. Backups:</label>
+          <input type="number" value="10" class="form-control" pattern="^[0-9]+" min="1" id="rangoBackups" [(ngModel)]="rangoBackups.value" name="rangoBackups" (keyup)="keyUpEvent($event)" (blur)="afterBlur($event)" (focus)="beforeBlur($event)">
         </div>
-        <div class="col-5">
-          <button class="btn btn-outline-success" [disabled]="backupService.mntBackups.length == 0" (click)="limpiarBackups(0, 'Generales', 0)">
+        <div class="form-group col-4" style="padding-top: 40px;">
+          <button id="btnSubmit" class="btn btn-outline-success" [disabled]="backupService.mntBackups.length == 0" (click)="limpiarBackups(0, 'Generales', 0)">
             <span>
               <fa-icon [icon]="util.faTools"></fa-icon>
             </span>
-            Limpiar</button>
-        </div >
+            Limpiar
+          </button>
+        </div>
       </div>
     </div>
   </div>
@@ -57,10 +60,9 @@
 </button>
 
 <div id="accordion" style="padding-left: 50px;padding-right: 50px" *ngIf="backupService.mntBackups.length > 0">
-  <div   class="card" *ngFor="let user of backupService.mntBackups; let i = index" >
-
-    <div class="card-header" [id] = "i">
-      <div class="float-left" style="width: 90% !important; padding: 10px;">
+  <div   class="card" *ngFor="let user of backupService.mntBackups; let i = index">
+    <div class="card-header" [id] = "i" [ngClass]="(user.checked) ? 'HeaderSelected' : 'HeaderNoSelected'">
+      <div class="float-left" style="width: 90% !important; padding: 10px" (click)="eventSelectCollapse(i)">
         <div class="row">
           <div class="col-8">
             <div class="row">
@@ -68,7 +70,7 @@
                 <h5 class="font-weight-bold">Usuario: </h5>
               </div>
               <div class="col-10">
-                <h5 class="font-weight-light"> {{user.email}} </h5>
+                <h5 class="font-weight-light"> {{user.email}}  id: {{user.id_user}}</h5>
               </div>
             </div>
           </div>
@@ -94,7 +96,7 @@
       </div>
     </div>
 
-    <div #cntBackupsUser class="tarjetaCuerpo">
+    <div #cntBackupsUser class="tarjetaCuerpo" [ngClass]="(user.checked) ? 'BodySelected' : 'BodyNoSelected'">
 
       <div class="card-body" style="height: 100%; overflow-y: scroll;">
           <table class="table table-hover" *ngIf="user.cantRep > 0" >
