--- a/src/app/Paginas/Body/backup/backup.component.html
+++ b/src/app/Paginas/Body/backup/backup.component.html
@@ -5,11 +5,11 @@
     <h4 class="text-light"><a [routerLink]="['/detalleUsuario']" class="text-light" style="text-decoration: none;">{{userService.User.email}}</a> </h4>
   </div>
 </div>
-<!--button class="btn btn-outline-info rounded-circle backNavigation" routerLink="/backups">
+<button type="button" class="btn btn-success rounded-circle addButton">
           <span>
-            <fa-icon [icon]="util.faChevronLeft"></fa-icon>
+            <fa-icon [icon]="util.faPlus"></fa-icon>
           </span>
-</button-->
+</button>
 <ul class="nav nav-tabs nav-color">
   <li class="nav-item tam-tab">
     <a class="nav-link tam-a text-light" routerLinkActive="active" [routerLink]="['accounts']">Accounts</a>
